--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "@storybook/addon-knobs": "^6.0.27",
     "@storybook/addon-links": "^6.0.27",
     "@storybook/addon-notes": "^5.3.21",
+    "@storybook/addon-viewport": "^6.0.28",
     "@storybook/addons": "^6.0.27",
     "@storybook/react": "^6.0.27",
     "@svgr/webpack": "^5.4.0",
