--- a/jsconfig.json
+++ b/jsconfig.json
@@ -5,7 +5,7 @@
       "app/*": ["./src/app/*"],
       "assets/*": ["./src/assets/*"],
       "components/*": ["./src/components/*"],
-      "features/*": ["src/pages/features/*"],
+      "features/*": ["./src/features/*"],
       "pages/*": ["./src/pages/*"],
       "utils/*": ["./src/utils/*"]
     }
