--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.4",
+    "sanitize-html": "^2.2.0",
     "use-local-storage-state": "^6.0.0"
   },
   "scripts": {
