feat/SOUR-16-eat-out-hero-slider add slider to EatOut page

--- a/package.json
+++ b/package.json
@@ -41,6 +41,9 @@
     "extends": "react-app"
   },
   "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
   },
   "browserslist": {
     "production": [
