bug/SOUR-87-clickable-pagination-and-button-outline-in-slider paste back husky hooks due to webkit error before

--- a/package.json
+++ b/package.json
@@ -41,6 +41,11 @@
   "eslintConfig": {
     "extends": "react-app"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
   "browserslist": {
     "production": [
       ">0.2%",
