--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-contenteditable": "^3.3.5",
+    "react-date-picker": "^8.0.5",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.4",
